@@ -77,6 +77,7 @@ protected:
 protected:
   virtual void handlePrelim( const std::vector<ObjectCalcer*>& os, const QPoint& p, KigPainter&, KigWidget& w ) = 0;
   virtual QString selectStatement( const std::vector<ObjectCalcer*>& args, const KigWidget& w ) = 0;
+  virtual int isAlreadySelectedOK( const std::vector<ObjectCalcer*>&, const int& ) = 0;
   virtual int wantArgs( const std::vector<ObjectCalcer*>&, KigDocument& d, KigWidget& w ) = 0;
   virtual void handleArgs( const std::vector<ObjectCalcer*>& args, KigWidget& w ) = 0;
 
@@ -93,6 +94,7 @@ public:
 
   void handlePrelim( const std::vector<ObjectCalcer*>& os, const QPoint& p, KigPainter&, KigWidget& w );
   QString selectStatement( const std::vector<ObjectCalcer*>& args, const KigWidget& w );
+  int isAlreadySelectedOK( const std::vector<ObjectCalcer*>&, const int& );
   int wantArgs( const std::vector<ObjectCalcer*>&, KigDocument& d, KigWidget& w );
   void handleArgs( const std::vector<ObjectCalcer*>& args, KigWidget& w );
 };
@@ -120,6 +122,7 @@ public:
 
   void handlePrelim( const std::vector<ObjectCalcer*>& os, const QPoint& p, KigPainter&, KigWidget& w );
   QString selectStatement( const std::vector<ObjectCalcer*>& args, const KigWidget& w );
+  int isAlreadySelectedOK( const std::vector<ObjectCalcer*>&, const int& );
   int wantArgs( const std::vector<ObjectCalcer*>&, KigDocument& d, KigWidget& w );
   void handleArgs( const std::vector<ObjectCalcer*>& args, KigWidget& w );
 
